--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <div class="bg-white shadow rounded divide-y">
         <div class="flex justify-between p-4 items-center">
           <div class="flex items-center space-x-4">
-            <img src="images__5_-removebg-preview.png" class="rounded-full" width="100" alt="Student">
+            <img src="images__5_-removebg-preview (1).png" class="rounded-full" width="100" alt="Student">
             <span>Andrew</span>
           </div>
           <span class="font-bold">70%</span>
